# Management-Suite

./: README.md  pyproject.toml
Management-Suite/: luna.py  main.py  test.py  ui_MainWindow.py
Management-Suite/ui/: MainWindow.ui
